# cyber-toolkit

./: .gitlab-ci.yml  Cargo.toml  README.md
roles/: blueteamer.role  bountyhunter.role  cracker.role  dos.role  forensic.role  malware.role  mobile.role  network.role  osint.role  redteamer.role  student.role  web.role
rpm/: cyber-toolkit.spec
src/: install.rs  main.rs  roles.rs  utils.rs
